--- a/LD34/LD34.vcxproj.filters
+++ b/LD34/LD34.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="Bonfire.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Stone.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PCH.hpp">
@@ -63,6 +66,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Bonfire.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Stone.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
